--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "parcel build index.html --dist-dir ./dist"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sairoden Gandarosa",
   "license": "ISC",
   "dependencies": {
     "parcel": "^2.0.0-beta.2"
